--- a/deployments/CRD/KubeArmorClusterPolicy.yaml
+++ b/deployments/CRD/KubeArmorClusterPolicy.yaml
@@ -58,16 +58,25 @@ spec:
                 enum:
                 - Allow
                 - Audit
+                - BatchAudit
                 - Block
                 type: string
               apparmor:
                 type: string
+              batchAudit:
+                properties:
+                  intervalSeconds:
+                    format: int32
+                    minimum: 1
+                    type: integer
+                type: object
               capabilities:
                 properties:
                   action:
                     enum:
                     - Allow
                     - Audit
+                    - BatchAudit
                     - Block
                     type: string
                   matchCapabilities:
@@ -77,6 +86,7 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         capability:
@@ -86,9 +96,9 @@ spec:
                           items:
                             properties:
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -122,6 +132,7 @@ spec:
                     enum:
                     - Allow
                     - Audit
+                    - BatchAudit
                     - Block
                     type: string
                   matchDirectories:
@@ -131,19 +142,19 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         dir:
                           pattern: ^\/$|^\/.*\/$
                           type: string
-                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -173,15 +184,16 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         fromSource:
                           items:
                             properties:
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -189,9 +201,9 @@ spec:
                         ownerOnly:
                           type: boolean
                         path:
+                          maxLength: 200
                           pattern: ^\/+.*[^\/]$
                           type: string
-                          maxLength: 200
                         readOnly:
                           type: boolean
                         severity:
@@ -213,6 +225,7 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         message:
@@ -254,6 +267,7 @@ spec:
                     enum:
                     - Allow
                     - Audit
+                    - BatchAudit
                     - Block
                     type: string
                   matchProtocols:
@@ -263,15 +277,16 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         fromSource:
                           items:
                             properties:
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -309,6 +324,7 @@ spec:
                       enum:
                       - Allow
                       - Audit
+                      - BatchAudit
                       - Block
                       type: string
                     name:
@@ -321,6 +337,7 @@ spec:
                     enum:
                     - Allow
                     - Audit
+                    - BatchAudit
                     - Block
                     type: string
                   matchDirectories:
@@ -330,19 +347,19 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         dir:
                           pattern: ^\/$|^\/.*\/$
                           type: string
-                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -370,19 +387,24 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
+                        allowedArgs:
+                          items:
+                            type: string
+                          maxItems: 20
+                          type: array
                         execname:
                           pattern: ^[^\/]+$
                           type: string
-                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -390,14 +412,9 @@ spec:
                         ownerOnly:
                           type: boolean
                         path:
+                          maxLength: 200
                           pattern: ^\/+.*[^\/]$
                           type: string
-                          maxLength: 200
-                        allowedArgs: 
-                          items: 
-                            type: string
-                          type: array
-                          maxItems: 20
                         severity:
                           maximum: 10
                           minimum: 1
@@ -415,6 +432,7 @@ spec:
                           enum:
                           - Allow
                           - Audit
+                          - BatchAudit
                           - Block
                           type: string
                         message:
@@ -483,9 +501,9 @@ spec:
                               dir:
                                 type: string
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                               recursive:
                                 type: boolean
                             type: object
@@ -493,7 +511,6 @@ spec:
                         path:
                           pattern: (^\/+.*[^\/]$)|(^\/$|^\/.*\/$)
                           type: string
-                          maxLength: 200
                         recursive:
                           type: boolean
                         syscall:
@@ -847,9 +864,9 @@ spec:
                               dir:
                                 type: string
                               path:
+                                maxLength: 200
                                 pattern: ^\/+.*[^\/]$
                                 type: string
-                                maxLength: 200
                               recursive:
                                 type: boolean
                             type: object
